successfully made the header look nice I'd give myself an 80%, I didn't make as many containers as I maybe should have to get the exact same thing however, what I did do function correctly, only uses flex, and is easily readable. minu points for margin between links and logo being 40px and being too lazy to fix it

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -9,9 +9,14 @@ body {
 }
 
 .header {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+
 }
 
 .profile-image {
@@ -45,4 +50,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.purple-stuff {
+  display: flex;
+  margin-left: auto;
+  gap: 16px;
 }
